# jlog

./: CMakeLists.txt  README.md
cmake/: jlog-config.cmake.in
include/: jlog.hxx
test/: CMakeLists.txt  test.cxx
